--- a/styles.css
+++ b/styles.css
@@ -394,3 +394,7 @@ button.btn-outline-light:hover {
   margin: 2px 0;
   font-size: 1rem;
 }
+
+.myTeamSwiper .swiper-pagination {
+  display: none !important;
+}
